--- a/meme-ory/package.json
+++ b/meme-ory/package.json
@@ -2,13 +2,17 @@
   "name": "meme-ory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://emmastotz.github.io/MEMEory/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "react-svg": "^10.0.25"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
